# llama-cli

./: .clang-tidy  .coderabbit.yaml  .gitignore  .gitleaksignore  .pii.example  .semgrepignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  INDEX.md  Makefile  README.md  TECHDEBT.md  TODO.md  VERSION  coverage.info  cpm.toml  features_list.txt  install.sh  setup-remote.sh  sonar-project.properties  test.log.bak
.config/: .clang-format  .gitleaksignore  .jscpd.json  .pii  Doxyfile  Modelfile  checkov.yaml  cliff.toml  delegation.yml  docker-compose.yml  gemini-models.txt  grype.yaml  hosts.example.json  hosts.json  lessons.yml  mull.yml  osv-scanner.toml  patterns.yml  pre-commit  q-models.txt  research-dates.env  rumdl.toml  setup.sh  test_comment_ratio.sh  trivy.yaml  trufflehog.yaml  versions.env  versions.json  yamllint.yml  zsteg.yml
.config/cmake/: aarch64-linux-gnu.cmake
.config/docker/: Dockerfile.mull
.config/searxng/: settings.yml
.config/spinners/: jarvis.txt  rick.txt
.config/templates/: cpp.cpp.tmpl  cpp.h.tmpl  cpp_test.cpp.tmpl  script.sh.tmpl
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/issues/: sprint-1-branch-naming.md  sprint-1-changelog.md  sprint-1-commit-validation.md  sprint-1-env-example.md  sprint-1-templates.md  sprint-2-branch-protection.md  sprint-2-coverage-bump.md  sprint-2-doc-change-ci.md  sprint-2-streaming.md  sprint-2-todo-scraping.md
.github/workflows/: ci.yml  release.yml
.kiro/agents/: llama-cli.json  llama-dev.json
demos/: README.md  agents.tape  chat.tape  commands.tape  exec.tape  feature-tour.tape  file-io.tape  record.sh  smart-routing.tape  vision.tape  web-search.tape
demos/tapes/: _defaults.tape  chat.tape  commands.tape  file-ops.tape  session.tape
docs/: README.md  adr-001-http-library.md  adr-002-quality-checks.md  adr-003-v-model-workflow.md  adr-004-configuration.md  adr-005-execution-modes.md  adr-006-branching-strategy.md  architecture-v2.md  architecture.md  clang-tidy.md  code-rabbit.md  cpp-core-guidelines.md  credits-in-ai.md  feature-coverage.md  feature-registry.yml  full-test-script.md  gh-manual.md  github-integration.md  loop-design.md  make.md  manual-test-journey.md  model-bench.md  model-guide.md  multi-model-guide.md  ollama-setup.md  pr-workflow.md  provider-roadmap.md  release.md  task-status.md  testing.md  user-guide.md
docs/adr/: 0003-kiro-cli-as-reference.md  README.md  adr-001-http-library.md  adr-002-quality-checks.md  adr-003-v-model-workflow.md  adr-004-configuration.md  adr-005-execution-modes.md  adr-006-branching-strategy.md  adr-007-cli-interface.md  adr-008-test-framework.md  adr-009-code-formatting.md  adr-010-documentation-indexing.md  adr-011-self-contained-setup.md  adr-012-interactive-repl.md  adr-013-file-reading.md  adr-014-tool-annotations.md  adr-015-command-execution.md  adr-016-tui-design.md  adr-017-integration-tests.md  adr-018-module-layout.md  adr-019-safe-file-writes.md  adr-020-provider-abstraction.md  adr-021-gemini-provider.md  adr-022-xref-integrity.md  adr-023-self-documenting-processes.md  adr-024-startup-precheck.md  adr-025-central-help-text.md  adr-026-version-pinning.md  adr-027-event-logging.md  adr-028-execution-limits.md  adr-029-repl-e2e.md  adr-030-stdin-sync.md  adr-031-tgpt-provider.md  adr-032-e2e-test-improvements.md  adr-033-kiro-cli-ollama.md  adr-044-tidy-boilerplate.md  adr-045-fix-release-pipeline.md  adr-046-kiro-cli-as-reference.md  adr-047-ai-guided-development-qa.md  adr-048-quality-framework.md  (+83 more)
docs/backlog/: 001-log-optimization.md  002-wingman-command-tips.md  003-wingman-preflight.md  004-smart-confirmation.md  005-streaming.md  006-distributed-ollama.md  007-exec-output-tuning.md  008-project-rename.md  009-package-distribution.md  010-command-permissions.md  011-model-switching.md  012-nick-prompt.md  013-diff-preview.md  014-provider-abstraction.md  015-planner-executor.md  016-execution-sandbox.md  017-multi-agent.md  018-reduce-complexity.md  019-context-compression.md  020-temperature-tuning.md  021-prompt-templates.md  022-fix-make-setup.md  023-commit-msg-hook.md  024-branch-naming.md  025-issue-pr-templates.md  026-changelog.md  027-coverage-bump.md  028-todo-scraping.md  029-branch-protection.md  030-doc-change-ci.md  031-inline-code-rendering.md  032-mermaid-rendering.md  033-tab-autocompletion.md  034-fix-release.md  035-code-spell-check.md  036-documentation-coverage.md  037-dependency-check.md  038-license-audit.md  039-local-ci.md  040-ci-caching.md  (+3 more)
docs/demos/: mock-responses.txt  record.sh
docs/design/: tgpt-integration.md
docs/features/: README.md
docs/prompts/: 01-commit-msg-hook.md  02-branch-naming.md  03-env-example.md  04-changelog.md  README.md  (+7 more)
e2e/: helpers.sh  test_autoagent.sh  test_color_theme.sh  test_confirmation_feedback.sh  test_diagrams.sh  test_files_flag.sh  test_full_feature.sh  test_line_edits.sh  test_live.sh  test_live_str_replace_remote.sh  test_new_commands.sh  test_repl_mode.sh  test_session.sh  test_smart_rw.sh  test_str_replace_remote.sh  test_sync_mode.sh
hooks/: pre-commit
include/: annotation.h  command.h  config.h  exec.h  json.h  ollama.h  repl.h  tui.h
res/: system-prompt-small.txt  system-prompt.txt  system_prompt.h.in
scripts/: build-index.sh  create-pr.sh  download-issues.sh  fetch-coderabbit-feedback.sh  gh-create-issue.sh  gh-pr-status.sh  install-docker-searxng-linux.sh  install-docker-searxng-mac.sh  install-llm-tools-linux.sh  install-llm-tools-mac.sh  install-vhs.sh  log-viewer.sh  pipeline-status.sh  pr-status.sh  setup.sh  test-files-integration.sh  test-index.sh  test_comment_ratio.sh  test_coverage.sh
src/: annotation.cpp  command.cpp  config.cpp  exec.cpp  help.h  json.cpp  main.cp__  main.cpp  ollama.cpp  repl.cpp  test_helpers.h
test/: integration.feature  test_annotation.cpp  test_annotations_it.cpp  test_command.cpp  test_comment_ratio.sh  test_config.cpp  test_conversation.cpp  test_exec.cpp  test_helpers.h  test_integration.cpp  test_json.cpp  test_markdown_it.cpp  test_options.cpp  test_repl.cpp
(+342 files in other folders)
